# penn-course-analysis

./: README.md  data-analysis.ipynb  data-collection.ipynb  penn-course-catalog.html  penn-course-data.csv  pyproject.toml
data/: all-course-data.txt  all-courses.csv
