[tool.poetry]
name = "penn-course-analysis"
version = "0.1.0"
description = ""
authors = ["Jasmine Cao <jcao3@seas.upenn.edu>"]
readme = "README.md"
packages = [{include = "penn_course_analysis"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.2"
selenium = "^4.8.2"
webdriver-manager = "^3.8.5"
pandas = "^1.5.3"
seaborn = "^0.12.2"
plotly = "^5.14.1"
nbformat = "^5.8.0"
scikit-learn = "^1.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
